--- a/templates/paiements/recus_liste.html
+++ b/templates/paiements/recus_liste.html
@@ -199,8 +199,8 @@
                 <button type="submit" class="btn btn-primary">
                     <i class="fas fa-search"></i> Filtrer
                 </button>
-                <a href="{% url 'paiements:recus_liste' %}" class="btn btn-secondary">
-                    <i class="fas fa-times"></i> Réinitialiser
+                <a href="{% url 'paiements:dashboard' %}" class="btn btn-secondary">
+                    <i class="fas fa-times"></i> Retour au Dashboard
                 </a>
             </div>
         </form>
