--- a/templates/paiements/recu_detail.html
+++ b/templates/paiements/recu_detail.html
@@ -146,8 +146,8 @@
             <i class="fas fa-palette"></i> Changer template
         </a>
         
-        <a href="{% url 'paiements:recus_liste' %}" class="btn btn-secondary btn-lg">
-            <i class="fas fa-arrow-left"></i> Retour à la liste
+        <a href="{% url 'paiements:dashboard' %}" class="btn btn-secondary btn-lg">
+            <i class="fas fa-arrow-left"></i> Retour au Dashboard
         </a>
         <a href="{% url 'paiements:detail' recu.paiement.pk %}" class="btn btn-outline-primary btn-lg">
             <i class="fas fa-money-bill"></i> Voir le paiement
