--- a/templates/contrats/detail_contrat_caution.html
+++ b/templates/contrats/detail_contrat_caution.html
@@ -312,7 +312,7 @@
                 </table>
                 
                 <div class="text-center mt-3">
-                    <a href="{% url 'proprietes:locataire_detail' contrat.locataire.id %}" 
+                    <a href="{% url 'proprietes:detail_locataire' contrat.locataire.id %}" 
                        class="btn btn-outline-primary btn-sm">
                         <i class="bi bi-eye"></i> Voir le profil
                     </a>
