--- a/templates/proprietes/confirm_supprimer_locataire_avance.html
+++ b/templates/proprietes/confirm_supprimer_locataire_avance.html
@@ -184,7 +184,7 @@
                         <a href="{% url 'proprietes:locataires_liste' %}" class="btn btn-secondary">
                             <i class="bi bi-arrow-left"></i> Retour à la Liste
                         </a>
-                        <a href="{% url 'proprietes:locataire_detail' locataire.pk %}" class="btn btn-outline-primary">
+                        <a href="{% url 'proprietes:detail_locataire' locataire.pk %}" class="btn btn-outline-primary">
                             <i class="bi bi-eye"></i> Voir le Détail
                         </a>
                     </div>
