--- a/templates/proprietes/locataire_modifier.html
+++ b/templates/proprietes/locataire_modifier.html
@@ -17,7 +17,7 @@
                 <p>Modifier les informations du locataire</p>
             </div>
             <div class="d-flex gap-2">
-                <a href="{% url 'proprietes:locataire_detail' locataire.pk %}" class="btn btn-secondary">
+                <a href="{% url 'proprietes:detail_locataire' locataire.pk %}" class="btn btn-secondary">
                     <i class="bi bi-arrow-left"></i> Retour au détail
                 </a>
                 <a href="{% url 'proprietes:locataires_liste' %}" class="btn btn-primary">
@@ -220,7 +220,7 @@
             <div class="form-actions">
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
-                        <a href="{% url 'proprietes:locataire_detail' locataire.pk %}" class="btn btn-secondary">
+                        <a href="{% url 'proprietes:detail_locataire' locataire.pk %}" class="btn btn-secondary">
                             <i class="bi bi-x-circle"></i> Annuler
                         </a>
                     </div>
