--- a/templates/proprietes/locataires_liste.html
+++ b/templates/proprietes/locataires_liste.html
@@ -56,7 +56,7 @@
                                 </td>
                                 <td>
                                     <div class="btn-group btn-group-sm" role="group" style="gap: 0.5rem;">
-                                        <a href="{% url 'proprietes:locataire_detail' locataire.pk %}" class="btn btn-outline-primary" title="Voir">
+                                        <a href="{% url 'proprietes:detail_locataire' locataire.pk %}" class="btn btn-outline-primary" title="Voir">
                                             <i class="bi bi-eye"></i>
                                         </a>
                                         <a href="{% url 'proprietes:modifier_locataire' locataire.pk %}" class="btn btn-outline-warning" title="Modifier">
